--- a/article/me/css/blog.css
+++ b/article/me/css/blog.css
@@ -153,6 +153,16 @@ h6, .h6 {
   color: #999;
 }
 
+.center {
+  width: auto;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+.text-center {
+  text-align: center;
+}
+
 
 /*
  * Footer
